Terraform_projects/tasks_study/020/Layer2-Servers/main.tf
#----------------------------------------------------------
# My Terraform
#
# Remote State on S3
#----------------------------------------------------------

provider "aws" {
  region = "us-east-2"
}

terraform {
  backend "s3" {
    bucket = "dmytro-liskevych-terraform-state" // Bucket where to SAVE Terraform State
    key    = "dev/servers/terraform.tfstate"   // Object name in the bucket to SAVE Terraform State
    region = "us-east-2"                       // Region where bycket created
  }
}

#===========================================================

data "terraform_remote_state" "network" {
  backend = "s3"
  config = {
    bucket = "dmytro-liskevych-terraform-state" // Bucket from where to GET Terraform State
    key    = "dev/network/terraform.tfstate"   // Object name in the bucket to GET Terraform state
    region = "us-east-2"                       // Region where bycket created
  }
}

data "aws_ami" "latest_amazone_linux" {
  owners      = ["amazon"]
  most_recent = true
  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }
}

#============================================================

resource "aws_instance" "web_server" {
  ami                    = data.aws_ami.latest_amazone_linux.id
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.webserver.id]
  subnet_id              = data.terraform_remote_state.network.outputs.public_subnet_ids[0]
  user_data              = <<EOF
  #!/bin/bash
  yum -y update
  yum -y install httpd
  myip=`curl http://169.254.169.254/latest/meta-data/local-ipv4`
  echo "<h2>WebServer with IP: $myip</h2><br>Build by Terraform with Remote State!"  >  /var/www/html/index.html
  echo "<br><font color="blue">Hello World!!" >> /var/www/html/index.html
  sudo service httpd start
  chkconfig httpd on
EOF
  tags = {
    Name = "WebServer"
  }
}

resource "aws_security_group" "webserver" {
  name   = "WebServer Security Group"
  vpc_id = data.terraform_remote_state.network.outputs.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [data.terraform_remote_state.network.outputs.vpc_cidr]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name  = "${var.env}-web-server-sg"
    Owner = "Dmytro_Liskevych"
  }
}
